Slim mobile navbar container height to prevent header overlap

--- a/foodhub-client/src/styles/mobileNavbar.css
+++ b/foodhub-client/src/styles/mobileNavbar.css
@@ -110,6 +110,7 @@
         margin: 0 !important;
         height: auto;
         min-height: 44px;
+        box-sizing: border-box;
     }
 
     .navbar-left {
